--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://RupertC07.github.io/",
+  "homepage": "https://rupertc07.github.io/Lyric-and-thoughts/",
   "name": "random.tots",
   "private": false,
   "version": "0.0.0",
